large screen cards no longer vertically stretched

--- a/src/css/combined.css
+++ b/src/css/combined.css
@@ -349,7 +349,7 @@ main {
 }
 
 /* Media Queries */
-@media (min-width: 1000px) {
+@media (min-width: 1025px) {
     .logo {
         top: 20px; 
         left: 20px; 
@@ -375,10 +375,6 @@ main {
 
     .form-header h1 {
         font-size: 4em; 
-    }
-
-    #hamburger-menu {
-        display: none;
     }
 }
 
@@ -406,10 +402,6 @@ main {
 
     .form-header h1 {
         font-size: 6em; 
-    }
-
-    .card {
-        flex: 0 0 calc(25% - 20px);
     }
 }
 
